remove wrap and web share

--- a/wp-content/themes/workingnyc/views/employ-nyc-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/employ-nyc-landing-page.twig
@@ -11,11 +11,6 @@
           return: {
             'label': __('Home', 'WNYC'),
             'link': site.url
-          },
-          web_share: {
-            'title': post.title,
-            'text': (post.web_share_text) ? post.web_share_text,
-            'url': fn('wp_get_shortlink')
           }
         } %}
       </div>
@@ -39,7 +34,7 @@
           <section {% if not loop.last %}class="pb-6"{% endif %} {% if section.section_title %}id="{{ section.section_title|trim|replace({' ': '-'})|lower }}"{% endif %}>
             {% if section.section_title %}
             <div class="bg-scale-0 sticky top-0 z-10 pt-5">
-              <div class="wrap">
+              <div>
                 <h3 class="h5 mb-3 text-alt border-b border-scale-4 py-3">
                   {{ section.section_title }}
                 </h3>
@@ -47,7 +42,7 @@
             </div>
             {% endif %}
 
-            <div class="wrap">
+            <div>
               {{ section.section_content }}
             </div>
           </section>
