add hover for other employer program cards

--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -28,12 +28,19 @@
           {% endif %}
         {% endif %}
           {% for post in this.posts %}
+              {% if post.post_type == 'employer-programs' %} {# Don't include the parent div because that interferes with the shadow #}
+                {% include [ post.post_type ~ '/' ~ post.singular ~ '.twig'] with {
+                  post: post,
+                  is_home:is_home
+                } %}
+              {% else %}
               <div class="max-w-full">
                 {% include [ post.post_type ~ '/' ~ post.singular ~ '.twig'] with {
                   post: post,
                   is_home:is_home
                 } %}
               </div>
+              {% endif %}
           {% endfor %}
         </div>
       </div>
