--- a/wp-content/themes/workingnyc/views/employer-programs/similar-employer-program.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/similar-employer-program.twig
@@ -2,26 +2,26 @@
 {# @For    Post Type #}
 {# @Class  timber-posts/Programs.php #}
 {# For homepage collection #}
-<article class="rounded border border-scale-3 p-3">
-  <header class="border-b border-scale-3 pb-2">
-    <img class="w-[80px] h-[60px] mb-3 object-contain object-left" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
-    <a href="{{ post.link }}">
+<a href="{{ post.link }}" class="no-underline text-inherit font-[400] hover:shadow-[0_0_20px_3px_#EFF1F5] rounded-[5px] border-2 border-[#ECEFF2] p-3">
+  <article>
+    <header class="border-b border-[#ECEFF2] pb-2">
+      <img class="w-[80px] h-[60px] mb-3 object-contain object-left" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
       <h5 class="pb-1">{{ post.employer_program_title }}</h5>
-    </a>
-    <p>
-      {{ post.employer_program_provider }}
-    </p>
-  </header>
+      <p>
+        {{ post.employer_program_provider }}
+      </p>
+    </header>
 
-  <div class="pt-2">
-    {{ post.employer_program_preview }}
+    <div class="pt-2">
+      {{ post.employer_program_preview }}
 
-    <div class="mt-2 flex flex-wrap gap-1">
-      {% for tag in post.meta('employer_program_tags') %}
-        <div class="rounded p-1 bg-scale-2 text-nowrap">
-            {{ tag.employer_program_tag }}
-        </div>
-      {% endfor %}
+      <div class="mt-2 flex flex-wrap gap-1">
+        {% for tag in post.meta('employer_program_tags') %}
+          <div class="rounded p-1 bg-scale-2 text-nowrap">
+              {{ tag.employer_program_tag }}
+          </div>
+        {% endfor %}
+      </div>
     </div>
-  </div>
-</article>
+  </article>
+</a>
