--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -59,6 +59,7 @@
       </div>
     </div>
   </div>
+  {% if post.meta('similar_programs') is not empty %}
   <div class="mt-5 tablet:mt-6 desktop:mt-7 mb-7 mx-3 tablet-mx-14 desktop-mx-26">
     <h3>{{ __('Similar services', 'WNYC') }}</h3>
     <div class="w-full grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-2">
@@ -67,6 +68,7 @@
       {% endfor %}
     </div>
   </div>
+  {% endif %}
 </div>
 {% endblock %}
 
