--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -41,15 +41,17 @@
         <div class="desktop:grid desktop:grid-cols-[1fr_1.15fr] items-center tablet:gap-x-6">
             <img class="w-full h-[420px] object-cover mb-4 desktop:mb-0" src="{{ post.meta('container_image').url }}" alt="{{ post.meta('container_image').alt }}" style="object-position: {{ post.meta('container_image_focal_point') }};"/>
             <div class="text-center tablet:text-left px-3 tablet:px-0 desktop-max-h-304 w-full">
-                <h2 class="mb-4 font-[600]">{{ post.meta('container_header') }}</h2>
-                <div class="text-[16px] mb-4">{{ post.meta('container_subtitle') }}</div>
-                <div>
-                    <a class="btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ post.meta('container_link').target }}" href="{{ post.meta('container_link').url }}">
-                        {{ post.meta('container_link').title }}
-                        <svg aria-hidden="true" class="icon-ui w-[20px] h-[20px] mr-0 rtl:flip">
-                            <use href="#lucide-arrow-right"></use>
-                        </svg>
-                    </a>
+                <h2 class="text-left mb-4 font-[600]">{{ post.meta('container_header') }}</h2>
+                <div class="text-left text-[16px] mb-4">{{ post.meta('container_subtitle') }}</div>
+                <div class="flex flex-col tablet:flex-row gap-3 tablet:gap-4">
+                    {% for item in post.meta('container_links') %}
+                        <a class="w-fit btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ item.link.target }}" href="{{ item.link.url }}">
+                            {{ item.link.title }}
+                            <svg aria-hidden="true" class="icon-ui w-[20px] h-[20px] mr-0 rtl:flip">
+                                <use href="#lucide-arrow-right"></use>
+                            </svg>
+                        </a>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -60,15 +62,17 @@
         <div class="desktop:grid desktop:grid-cols-[1fr_1.15fr] items-center tablet:gap-x-6">
             <img class="w-full h-[420px] object-cover mb-4 desktop:hidden" src="{{ post.meta('container_image_2').url }}" alt="{{ post.meta('container_image_2').alt }}" style="object-position: {{ post.meta('container_image_2_focal_point') }};"/>
             <div class="text-center tablet:text-left px-3 tablet:px-0 desktop-max-h-304 w-full">
-                <h2 class="mb-4 font-[600]">{{ post.meta('container_header_2') }}</h2>
-                <div class="text-[16px] mb-4">{{ post.meta('container_subtitle_2') }}</div>
-                <div>
-                    <a class="btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ post.meta('container_link_2').target }}" href="{{ post.meta('container_link_2').url }}">
-                        {{ post.meta('container_link_2').title }}
-                        <svg aria-hidden="true" class="icon-ui w-[20px] h-[20px] mr-0 rtl:flip">
-                            <use href="#lucide-arrow-right"></use>
-                        </svg>
-                    </a>
+                <h2 class="text-left mb-4 font-[600]">{{ post.meta('container_header_2') }}</h2>
+                <div class="text-left text-[16px] mb-4">{{ post.meta('container_subtitle_2') }}</div>
+                <div class="flex flex-col tablet:flex-row gap-3 tablet:gap-4">
+                    {% for item in post.meta('container_2_links') %}
+                        <a class="w-fit btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ item.link.target }}" href="{{ item.link.url }}">
+                            {{ item.link.title }}
+                            <svg aria-hidden="true" class="icon-ui w-[20px] h-[20px] mr-0 rtl:flip">
+                                <use href="#lucide-arrow-right"></use>
+                            </svg>
+                        </a>
+                    {% endfor %}
                 </div>
             </div>
             <img class="w-full h-[420px] object-cover mb-0 hidden desktop:block" src="{{ post.meta('container_image_2').url }}" alt="{{ post.meta('container_image_2').alt }}" style="object-position: {{ post.meta('container_image_2_focal_point') }};"/>
