newsletter page styling, and remove footer

--- a/wp-content/themes/workingnyc/views/components/breadcrumbs.twig
+++ b/wp-content/themes/workingnyc/views/components/breadcrumbs.twig
@@ -1,7 +1,7 @@
 {# @Type   Element #}
 {# @For    Generic Templates #}
 <nav class="breadcrumbs flex flex-wrap" aria-label="Breadcrumb">
-  <a
+  <a class="no-underline hover:underline active:underline"
   {% if hide_jobseeker_and_employer_navigation == true %}
       href="{{ site.url }}"
   {% elseif employer == true %}
@@ -19,7 +19,7 @@
     </svg>
 
     {% if crumb.link != '' %}
-    <a href="{{ crumb.link }}">{{ crumb.label }}</a>
+    <a class="no-underline hover:underline active:underline" href="{{ crumb.link }}">{{ crumb.label }}</a>
     {% else %}
     <b aria-current="page">{{ crumb.label }}</b>
     {% endif %}
