--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -1,4 +1,4 @@
-{% if hide_jobseeker_and_employer_navigation == false %}
+{% if hide_jobseeker_and_employer_navigation == false and hide_jobseeker_and_employer_footer == false %}
     <footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative shadow-[0_-2px_16px_0px_rgba(0,0,0,0.06)] py-3 tablet:py-5 bg-white" role="contentinfo">
     <div class="site-max-width">
     <nav class="o-attribution__flex">
