--- a/wp-content/themes/workingnyc/views/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/newsletter.twig
@@ -25,7 +25,7 @@
     <section class="site-max-width">
       <div class="py-5 tablet:py-6">
         <div data-js="newsletter-form">
-          <form action="https://nyc.us18.list-manage.com/subscribe/post?u={{ constant('MAILCHIMP_ACCOUNT') }}&amp;id={{ constant('MAILCHIMP_AUDIENCE_ID') }}" id="mc-embedded-subscribe-form" method="post" target="_blank" novalidate="true">
+          <form action="https://nyc.us18.list-manage.com/subscribe/post?u={{ constant('MAILCHIMP_ACCOUNT') }}&amp;id={{ constant('MAILCHIMP_AUDIENCE_ID') }}" id="mc-embedded-subscribe-form" method="post" target="_blank">
             <div class="flex flex-col">
               <label class="mb-1" for="mce-EMAIL">{{ __('Email', 'WNYC') ~ '*' }}</label>
               <input class="w-full max-w-[342px] rounded border border-[#C1C6CB] mb-1" id="mce-EMAIL" name="EMAIL" required type="email" value="{{ email }}">
