--- a/wp-content/themes/workingnyc/views/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/newsletter.twig
@@ -26,7 +26,7 @@
       <div class="py-5 tablet:py-6">
         <div data-js="newsletter-form">
           <form action="https://nyc.us18.list-manage.com/subscribe/post?u={{ constant('MAILCHIMP_ACCOUNT') }}&amp;id={{ constant('MAILCHIMP_AUDIENCE_ID') }}" id="mc-embedded-subscribe-form" method="post" target="_blank">
-            <div class="flex flex-col">
+            <div class="flex flex-col" data-js="form-fields">
               <label class="mb-1" for="mce-EMAIL">{{ __('Email', 'WNYC') ~ '*' }}</label>
               <input class="w-full max-w-[342px] rounded border border-[#C1C6CB] mb-1" id="mce-EMAIL" name="EMAIL" required type="email" value="{{ email }}">
               
@@ -35,6 +35,9 @@
             </div>
 
             <button class="btn-secondary" type="submit">Submit</button>
+            <a class="btn-secondary hidden" 
+              href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}" 
+              data-js="home-button">Return to home</a>
 
             <article aria-hidden="true" class="c-alert c-alert-status-tertiary mt-5 hidden" data-js="alert-error" role="alert">
               <div class="c-alert__graphic">
@@ -60,14 +63,14 @@
               </div>
             </article>
 
-            <article aria-hidden="true" class="c-alert c-alert-status-secondary mt-5 hidden" data-js="alert-success" role="alert">
+            <article aria-hidden="true" class="c-alert c-alert-status-secondary mt-5 bg-[#C9EEFE] hidden" data-js="alert-success" role="alert">
               <div class="c-alert__graphic">
                 <svg aria-hidden="true" class="icon-ui">
                   <use href="#lucide-info"></use>
                 </svg>
               </div>
 
-              <div class="c-alert__body bg-[#C9EEFE]">
+              <div class="c-alert__body">
                 <b>{{ __('Check your email to confirm your subscription.', 'WNYC') }}</b>
                 <p data-js-alert="text">{{ __('Please click the confirmation link to start receiving our newsletter.', 'WNYC') }}</p>
               </div>
