added newsletter and form scripts to project directory

--- a/wp-content/themes/workingnyc/src/scss/_imports.scss
+++ b/wp-content/themes/workingnyc/src/scss/_imports.scss
@@ -6,6 +6,7 @@
 @forward 'utilities/colors/colors';
 @forward 'utilities/navigation/navigation';
 @forward 'utilities/text/text';
+@forward 'utilities/errors/errors';
 @forward '@nycopportunity/pttrn-scripts/src/spinner/spinner';
 
 @forward 'tokens';
