announcement card min height

--- a/wp-content/themes/workingnyc/views/components/announcement.twig
+++ b/wp-content/themes/workingnyc/views/components/announcement.twig
@@ -1,7 +1,7 @@
 {# @Type   Component #}
 {# @For    Post Type #}
 {# @Class  timber-posts/Announcements.php #}
-<article class="c-card c-card-transparent h-full px-4 pb-4">
+<article class="c-card c-card-transparent h-full px-4 pb-4 min-h-[400px]">
   <header class="pb-2 border-b-2 border-[#F0F6FA]">
     <a href="{{ function('convert_link_locale', this.link , site.site_url, site.url) }}" target="{{ this.target }}" class="c-card__header-link pt-4">
       <h5 class="c-card__title text-[20px] desktop:text-[22px]">
