--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -25,12 +25,12 @@
                     <div class="grid bg-white p-4 w-full">
                         <h3 class="mx-auto mb-4 text-center">{{ post.meta('subtitle_1') }}</h3>
                         <p class="mx-auto mb-4 text-center">{{ post.meta('description_1') }}</p>
-                        <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_1'), site.site_url, site.url)  }}">{{ post.meta('button_label_1') }}</a>
+                        <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_1'), site.site_url, site.url) }}">{{ post.meta('button_label_1') }}</a>
                     </div>
                     <div class="grid bg-white p-4 w-full">
                         <h3 class="mx-auto mb-4 text-center">{{ post.meta('subtitle_2') }}</h3>
                         <p class="mx-auto mb-4 text-center">{{ post.meta('description_2') }}</p>
-                        <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_2'), site.site_url, site.url)  }}">{{ post.meta('button_label_2') }}</a>
+                        <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_2'), site.site_url, site.url) }}">{{ post.meta('button_label_2') }}</a>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 <div class="text-left text-[16px] mb-4">{{ post.meta('container_subtitle') }}</div>
                 <div class="flex flex-col tablet:flex-row gap-3 tablet:gap-4">
                     {% for item in post.meta('container_links') %}
-                        <a class="w-fit btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ item.link.target }}" href="{{ item.link.url }}">
+                        <a class="w-fit btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ item.link.target }}" href="{{ function('convert_link_locale', item.link.url, site.site_url, site.url) }}">
                             {{ item.link.title }}
                             <svg aria-hidden="true" class="icon-ui w-[20px] h-[20px] mr-0 rtl:flip">
                                 <use href="#lucide-arrow-right"></use>
@@ -66,7 +66,7 @@
                 <div class="text-left text-[16px] mb-4">{{ post.meta('container_subtitle_2') }}</div>
                 <div class="flex flex-col tablet:flex-row gap-3 tablet:gap-4">
                     {% for item in post.meta('container_2_links') %}
-                        <a class="w-fit btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ item.link.target }}" href="{{ item.link.url }}">
+                        <a class="w-fit btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ item.link.target }}" href="{{ function('convert_link_locale', item.link.url, site.site_url, site.url) }}">
                             {{ item.link.title }}
                             <svg aria-hidden="true" class="icon-ui w-[20px] h-[20px] mr-0 rtl:flip">
                                 <use href="#lucide-arrow-right"></use>
