remove newsletter outline when focused

--- a/wp-content/themes/workingnyc/views/objects/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/objects/newsletter.twig
@@ -7,9 +7,9 @@
         <label class="c-question__label" for="EMAIL"><p>{{options.newsletter_description}}</p></label>
 
         <div class="c-question__container">
-          <div class="c-question__input desktop:w-[600px]">
+          <div class="c-question__input desktop:w-[600px] border-0">
             <div class="input">
-              <input id="question-a348d8b2ae03" name="EMAIL" placeholder="Enter your email" required="true" type="email">
+              <input class="outline-0" id="question-a348d8b2ae03" name="EMAIL" placeholder="Enter your email" required="true" type="email">
             </div>
 
             <div class="c-question__button">
