Created new field to enable link to open in new tab

--- a/wp-content/themes/workingnyc/views/components/container.twig
+++ b/wp-content/themes/workingnyc/views/components/container.twig
@@ -27,7 +27,11 @@
           {% set container_button_class = 'btn-styled' %}
         {% endif %}
 
-        <a class="mt-2 btn {{ container_button_class }} pointer-events-auto" href="{{ function('convert_link_locale', this.fields.container_button_link, site.site_url, site.url) }}">{{ this.fields.container_button_text }}</a>
+        {% if this.fields.container_target == 1 %}
+          {% set container_target_external_site = '_blank' %}
+        {% endif %}
+
+        <a class="mt-2 btn {{ container_button_class }} pointer-events-auto" target="{{ container_target_external_site }}" href="{{ function('convert_link_locale', this.fields.container_button_link, site.site_url, site.url) }}">{{ this.fields.container_button_text }}</a>
       </div>
     {% if this.fields.container_image_side == 'right' %}
       <div class="h-[300px] tablet:h-[400px] w-full desktop:w-[500px] hidden desktop:block">
