Added new data attribute to select the right element

--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -15,7 +15,7 @@
     <span class="hidden tablet:block desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
   </div>
   <div class="flex items-center">
-    <button class="py-1 px-1 flex items-center no-underline hover:underline active:underline" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+    <button class="py-1 px-1 flex items-center no-underline hover:underline active:underline" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-js-dialog="language" data-dialog-lock="true" data-js="dialog">
       <svg class="h-3 w-3 mr-[4px]">
         <use href="#languages-nav"></use>
       </svg>
